# grapgql-study-todo-app

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: errors.py  main.py
app/api/: mutations.py  queries.py
app/core/: auth.py  config.py  secure.py
app/database/: connection.py
app/database/schema/: __init__.py  todo.py  user.py
app/graphql/: schema.graphql
app/migrations/: env.py
app/migrations/versions/: 0b8895e2a7c6_update_user_db_scheam.py  6ce89d340dc1_update_date_field.py  b7f36ac3d73a_update_schemas.py  f56383289cef_init.py
app/services/: base.py  todo.py  user.py
